--- a/index.html
+++ b/index.html
@@ -1,6 +1,4 @@
-<!DOCTYPE html>
-<html lang="en">
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
@@ -47,7 +45,12 @@
       <kbd>L</kbd>
       <span class="sound">tink</span>
     </div>
+    <div data-key="186" class="key">
+      <kbd>;</kbd>
+      <span class="sound">fish</span>
+    </div>
   </div>
+
 
   <audio data-key="65" src="sounds/clap.wav"></audio>
   <audio data-key="83" src="sounds/hihat.wav"></audio>
@@ -58,6 +61,7 @@
   <audio data-key="74" src="sounds/snare.wav"></audio>
   <audio data-key="75" src="sounds/tom.wav"></audio>
   <audio data-key="76" src="sounds/tink.wav"></audio>
+  <audio data-key="186" src="sounds/fish.wav"></audio>
 
 <script>
 
